--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     ]
   },
   "dependencies": {
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.10.0"
   },
   "volta": {
     "node": "18.15.0",
     "npm": "9.5.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
