rework router set up and introduce data loader for atlas page

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "vite --port 6969",
+    "start:dev-server": "concurrently \"npm run dev-server \"  \"npm run start\" ",
+    "dev-server": "json-server --routes ./dev-routes.json ./db.json --watch",
     "build": "tsc && vite build",
     "lint": "tsc --noEmit && eslint .",
     "prettier:check": "prettier --check .",
@@ -34,11 +36,13 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "concurrently": "^8.2.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
+    "json-server": "^0.17.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
