--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
     "@tanstack/react-query": "^4.32.6",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
